--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,7 +9,7 @@
   box-sizing: border-box;
 }
 .container{
-  max-width: 1550px;
+  max-width: 1440px;
   padding-left: 20px;
   padding-right: 20px;
   margin: 0 auto;
@@ -23,4 +23,7 @@
   --font-white: #fff;
   --color-green: #DFFF00;
   --card-box-shadow: 0 5px 6px #0f0f0f59,0 24px 82px #252525b3;
+}
+body{
+  background-color: var(--bg-black900)
 }
