--- a/src/components/header/style.module.scss
+++ b/src/components/header/style.module.scss
@@ -4,7 +4,8 @@ header.header{
     width: 100%;
     background-color: var(--bg-black900);
     padding: 0 2rem;
-    font-family: "Nunito";
+    font-family: "Nunito" !important;
+    z-index: 999;
     .nav__wrapper{
         position: relative;
         width: 100%;
@@ -30,11 +31,14 @@ header.header{
             height: 2px;
             background-color: var(--color-green);
             position: absolute;
-            left: 49%;
+            left: 49.5%;
             bottom: 10%;
             transform: translateX(-50%);
             border-radius: 25px;
             transition: all .25s linear;
+        }
+        .logo{
+            cursor: pointer;
         }
         ul{
             li{
@@ -46,6 +50,45 @@ header.header{
                 font-size: 16px;
                 &:hover{
                     color: var(--color-green);
+                }
+            }
+        }
+        .langs{
+            position: fixed;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            top: 90px;
+            right: 3.5%;
+            width: 100px;
+            height: 100px;
+            border-radius: 15px 0 15px 15px;
+            overflow: hidden;
+            transform: scale(0);
+            transition: .1s linear;
+            border: 1px solid rgba(0, 0, 0, .1);
+            opacity: 0;
+            box-shadow: 0 1px 2px rgba(0,0,0,0.03), 0 2px 4px rgba(0,0,0,0.03), 0 4px 8px rgba(0,0,0,0.03), 0 8px 16px rgba(0,0,0,0.03), 0 16px 32px rgba(0,0,0,0.03), 0 32px 64px rgba(0,0,0,0.03);
+            &.visible{
+                transform: scale(1);
+                opacity: 1;
+            }
+            button{
+                width: 100%;
+                height: calc(100% / 3);
+                border-radius: 0;
+                border: none;
+                outline: none;
+                background-color: white;
+                cursor: pointer;
+                transition: .1s linear;
+                border-bottom: 1px solid rgba(0, 0, 0, .1);
+                &:last-child{
+                border: none;
+                }
+                &:hover{
+                    background-color: rgb(247, 247, 247);
                 }
             }
         }
