--- a/src/components/Intro/style.module.scss
+++ b/src/components/Intro/style.module.scss
@@ -1,4 +1,5 @@
 .intro{
+    font-family: "Nunito";
         &__firstImage{
             width: 100%;
             height: 140vh;
@@ -23,6 +24,13 @@
                     object-fit: cover;
                     object-position: top;
                 }
+                }
+                h1{
+                    color: white;
+    font-size: 7vw;
+    z-index: 3;
+    text-align: center;
+    white-space: nowrap;
             }
     }
 }
