--- a/src/components/Intro/style.module.scss
+++ b/src/components/Intro/style.module.scss
@@ -1,5 +1,4 @@
 .intro{
-    font-family: "Nunito";
         &__firstImage{
             width: 100%;
             height: 140vh;
@@ -27,6 +26,7 @@
                 }
                 h1{
                     color: white;
+    font-family: "Roboto Condensed";
     font-size: 7vw;
     z-index: 3;
     text-align: center;
