--- a/src/components/header/style.module.scss
+++ b/src/components/header/style.module.scss
@@ -2,7 +2,7 @@ header.header{
     position: fixed;
     top: 0;
     width: 100%;
-    background-color: var(--bg-black900);
+    background-color: var(--color-main);
     padding: 0 2rem;
     font-family: "Nunito" !important;
     z-index: 999;
@@ -17,19 +17,19 @@ header.header{
             cursor: pointer;
             &:hover{
                 path{
-                    stroke: var(--color-green);
-                transition: .1s linear infinite;
+                    stroke: var(--color-secondary);
+                    transition: .1s linear infinite;
                 }
             }
             path{
-                stroke: var(--font-white);
+                stroke: var(--font-main);
                 transition: .1s linear infinite;
             }
         }
         .indicator{
             width: 85px;
             height: 2px;
-            background-color: var(--color-green);
+            background-color: var(--font-main);
             position: absolute;
             left: 49.5%;
             bottom: 10%;
@@ -45,11 +45,11 @@ header.header{
                 float: left;
                 list-style: none;
                 margin: 0 1rem;
-                color: var(--font-white);
+                color: black;
                 cursor: pointer;
                 font-size: 16px;
                 &:hover{
-                    color: var(--color-green);
+                    color: var(--font-main);
                 }
             }
         }
