--- a/src/components/Hero/style.module.scss
+++ b/src/components/Hero/style.module.scss
@@ -5,7 +5,7 @@
     min-height: 100vh;
     .herosvg{
         position: absolute;
-        opacity: 0.5;
+        opacity: 0.3;
         z-index: -1;
         path{
             stroke: var(--color-secondary);
@@ -75,6 +75,7 @@
         justify-content: center;
         align-items: center;
         flex-direction: row;
+        backdrop-filter: blur(3px);
         &_text{
             width: 30%;
         }
